allow using async await

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@babel/cli": "^7.4.3",
 		"@babel/core": "^7.4.3",
 		"@babel/plugin-proposal-class-properties": "^7.4.0",
+		"@babel/plugin-transform-runtime": "^7.12.17",
 		"@babel/preset-env": "^7.4.3",
 		"@babel/preset-react": "^7.0.0",
 		"babel-eslint": "^10.0.1",
@@ -65,7 +66,13 @@
 			"@babel/preset-react"
 		],
 		"plugins": [
-			"@babel/plugin-proposal-class-properties"
+			"@babel/plugin-proposal-class-properties",
+			[
+				"@babel/plugin-transform-runtime",
+				{
+					"regenerator": true
+				}
+			]
 		]
 	},
 	"dependencies": {
