--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # 1. In the back end code you access the variable by importing os and then typing print(os.getEnv('VARIABLE_NAME'))
 
 # Back-End Variables
-DATABASE_URL=postgres://gitpod@localhost:5432/example
+DATABASE_URL=postgresql://gitpod@localhost:5432/example
 FLASK_APP_KEY="any key works"
 FLASK_APP=src/app.py
 FLASK_ENV=development
